--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
   <div class="button-box">
     <ul>
-      <li><a href="tienda.html">TIENDA</a></li>
+      <li><a href="./tienda.html">TIENDA</a></li>
       <li><a href="https://discord.gg/NYKzf7xyck">DISCORD</a></li>
-      <li><a href="donar.html">DONAR</a></li>
+      <li><a href="./donar.html">DONAR</a></li>
     </ul>
   </div>
 </div>
